# trackjoint

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  customize_package.sh  package.xml  trackjoint.rosinstall
.docker/: Dockerfile
.github/: auto_assign.yml  config.yml
example_data/: j1.ods  j2.ods  j3.ods  j4.ods  j5.ods  j6.ods  traj_from_toppra.ods
include/PACKAGE_NAME/: CPP_CLASS_FILE_NAME.h
include/trackjoint/: LexActivator.h  LexStatusCodes.h  butterworth_filter.h  configuration.h  cxxopts.hpp  error_codes.h  joint_trajectory.h  kinematic_state.h  license_manager.h  limits.h  single_joint_generator.h  track_joint.h  trajectory_generator.h  utilities.h
scripts/: Loading_files_and_plotting.sce  load_and_plot_output.sce  make_all_plots.m  plot  plot_one_joint.m
src/: CPP_CLASS_FILE_NAME.cpp  CPP_EXECUTABLE_NAME.cpp  butterworth_filter.cpp  license_client.cpp  license_manager.cpp  run_example.cpp  simple_example.cpp  single_joint_generator.cpp  six_dof_examples.cpp  streaming_example.cpp  three_dof_examples.cpp  track_joint.cpp  trajectory_generator.cpp  utilities.cpp
src/moveit_trackjoint_comm/: CMakeLists.txt  package.xml
src/moveit_trackjoint_comm/src/: listener.cpp  run_example_moveit_trackjoint.cpp  talker.cpp
src/trackjoint/: python_track_joint.py
test/: CPP_CLASS_FILE_NAME_test.cpp  CPP_CLASS_FILE_NAME_test.test  algorithm_test.cpp  algorithm_test.test  helper_function_test.cpp  helper_function_test.test  moveit_des_acc.txt  moveit_des_pos.txt  moveit_time_from_start.txt  single_joint_generator_test.cpp  single_joint_generator_test.test  test_examples.py  test_examples.test  test_utilities.h  track_joint_test.cpp  track_joint_test.test  trajectory_generation_test.cpp  trajectory_generation_test.test
test/data/: moveit_des_vel.txt
test/data/30_percent_speed_oscillation/: moveit_des_pos.txt
