<?xml version="1.0"?>
<package format="2">
  <name>trackjoint</name>
  <version>0.0.1</version>
  <description>A trajectory-smoothing library</description>

  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>
  <author email="zelenak@picknik.ai">Andy Zelenak</author> 
  <author email="guilherme@picknik.ai">Guilherme Sartori Natal</author>

  <license>All rights reserved.</license>

  <url type="website">https://github.com/PickNikRobotics/trackjoint</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/trackjoint/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/trackjoint/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslint</depend>
  <depend>eigen</depend>
  <depend version_eq="3.9">clang-format</depend>

  <export>
  </export>
</package>
