<?xml version="1.0"?>
<package format="2">
  <name>trackjoint</name>
  <version>0.0.1</version>
  <description>A trajectory-smoothing library</description>

  <maintainer email="zelenak@picknik.ai">Andy Zelenak</maintainer>
  <author email="zelenak@picknik.ai">Andy Zelenak</author>
  <author email="guilherme@picknik.ai">Guilherme Sartori Natal</author>

  <license>3-clause BSD</license>

  <url type="website">https://github.com/PickNikRobotics/trackjoint</url>
  <url type="bugtracker">https://github.com/PickNikRobotics/trackjoint/issues</url>
  <url type="repository">https://github.com/PickNikRobotics/trackjoint/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

<!-- TODO(andyz): update for ROS2
  <depend>roslib</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rospy</depend>
  <depend>eigen</depend>
  <depend version_eq="3.9">clang-format</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
-->

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_index_cpp</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
